2014-09-04  Eli Zaretskii  <eliz@gnu.org>

	* data.c (set_internal): Use assq_no_quit, not Fassq, to find an
	existing binding of a variable, to avoid silently aborting
	commands that use specbind.  (Bug#18331)

2014-09-02  Eli Zaretskii  <eliz@gnu.org>

	* dispnew.c (buffer_posn_from_coords): Fix an off-by-one error in
	the reported row in the case of a window with a header line, by
	improving on the fix committed in 2011-10-08T10:58:50Z!eliz@gnu.org
	eliz@gnu.org-20111008105850-ht4tvsayohvr1kjc.  (Bug#18384)

2014-09-02  Paul Eggert  <eggert@cs.ucla.edu>

	* eval.c (internal_lisp_condition_case): Don't overrun the stack
	when configured --with-wide-int on typical 32-bit platforms.

2014-08-31  Eli Zaretskii  <eliz@gnu.org>

	* xdisp.c (display_and_set_cursor): Call erase_phys_cursor also
	when HPOS is negative, for the benefit of R2L glyph rows whose
	newline overflows into the fringe.

2014-08-30  Ken Brown  <kbrown@cornell.edu>

	* conf_post.h (strnicmp) [CYGWIN && HAVE_NTGUI]: Define.
	(Bug#18366)

2014-08-28  Eli Zaretskii  <eliz@gnu.org>

	* syntax.c (scan_lists): Don't examine positions before BEGV.
	(Bug#18339)

2014-08-25  Eli Zaretskii  <eliz@gnu.org>

	* conf_post.h (_GL_EXECINFO_INLINE) [MSDOS]: Don't define.

2014-08-18  Eli Zaretskii  <eliz@gnu.org>

	* xdisp.c (handle_stop): Improve commentary.

	* indent.c (Fvertical_motion): Fix vertical motion up through a
	display property after a newline.  (Bug#18276)

2014-08-17  Eli Zaretskii  <eliz@gnu.org>

	* xdisp.c (display_line): Don't assume that the call to
	reseat_at_next_visible_line_start ends up at a character
	immediately following the newline on the previous line.  Avoids
	setting the ends_at_zv_p flag on screen lines that are not at or
	beyond ZV, which causes infloop in redisplay.  For the details, see
	http://lists.gnu.org/archive/html/emacs-devel/2014-08/msg00368.html.

	* dispnew.c (buffer_posn_from_coords): Fix mirroring of X
	coordinate for hscrolled R2L screen lines.  (Bug#18277)
